jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app: jenkins
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: 8643.jenkins
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
